# stat-agent-mcp-spec

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_PROMPT.md  Dockerfile  PROJECT_SPEC.md  README.md  pyproject.toml  railpack.json  railway.toml
scripts/: create_demo_db.py
src/stat_agent_mcp/: __init__.py  __main__.py  config.py  errors.py  health.py  http_auth.py  http_lifecycle.py  http_server.py  server.py
src/stat_agent_mcp/connectors/: __init__.py  base.py  demo_sqlite.py  identifiers.py  sqlite.py
src/stat_agent_mcp/models/: __init__.py  common.py  profiles.py  statistical_tests.py  tables.py
src/stat_agent_mcp/services/: __init__.py  extraction.py  profiling.py  testing.py
src/stat_agent_mcp/statistics/: __init__.py  proportions.py  validation.py  welch.py
src/stat_agent_mcp/tools/: __init__.py  list_tables.py  profile_table.py  run_test.py
tests/: conftest.py
tests/integration/: test_bounded_extraction.py  test_http_server.py  test_list_tables.py  test_mcp_http.py  test_mcp_stdio.py  test_profile_table.py  test_run_test.py  test_sqlite_connector.py
tests/unit/: test_config.py  test_demo_database.py  test_errors.py  test_http_auth.py  test_identifiers.py  test_profiling.py  test_proportions.py  test_statistical_validation.py  test_welch.py
