[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "stat-agent-mcp"
version = "0.1.0"
description = "Read-only statistical testing MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "pandas>=2.1,<3",
    "pydantic>=2.7,<3",
    "scipy>=1.11,<2",
    "statsmodels>=0.14,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pandas-stubs>=2.1,<3",
    "pytest>=8.2,<10",
    "ruff>=0.5,<1",
]

[project.scripts]
stat-agent-mcp = "stat_agent_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stat_agent_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]
